Criação do formulário para preencher os dados de uma ToDo no HTML

--- a/todoList/src/main/java/com/todoList/todoList/view/front/index.html
+++ b/todoList/src/main/java/com/todoList/todoList/view/front/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="box">
+
+        <h1>Todo List</h1>
+
+        <form id="formulario">
+            <input type="text" class="titulo" placeHolder="Titulo" required>
+            <input type="text" class="descricao" placeHolder="Descrição" required>
+            <input type="text" class="status" placeHolder="Status" required>
+            <input type="text" class="prioridade" placeHolder="Prioridade(1,2,3...10)" required>
+            <button type="submit">Cadastrar</button>
+        </form>
+
+    </div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
