Função para listar asd Todos no Front End funcionando e HTML já feito

--- a/todoList/src/main/java/com/todoList/todoList/view/front/index.html
+++ b/todoList/src/main/java/com/todoList/todoList/view/front/index.html
@@ -19,6 +19,9 @@
             <button type="submit">Cadastrar</button>
         </form>
 
+        <h2>Tarefas Cadastradas</h2>
+        <ul class="lista"></ul>
+
     </div>
 
     <script src="./js/main.js"></script>
