Atualizações do HTML e JavaScript para cancelar a edição de uma tarefa, criando as funções editarTarefa e cancelarEdicao

--- a/todoList/src/main/java/com/todoList/todoList/view/front/index.html
+++ b/todoList/src/main/java/com/todoList/todoList/view/front/index.html
@@ -21,6 +21,7 @@
             </select>
             <input type="text" class="prioridade" placeHolder="Prioridade(1,2,3...10)" required>
             <button type="submit">Cadastrar</button>
+            <button type="button" id="btnCancelar" style="display: none;">Cancelar</button>
         </form>
 
         <h2>Tarefas Cadastradas</h2>
