--- a/todoList/src/main/java/com/todoList/todoList/view/front/css/style.css
+++ b/todoList/src/main/java/com/todoList/todoList/view/front/css/style.css
@@ -10,3 +10,15 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
+
+.box {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 600px; 
+    text-align: center;
+}
+
